# test-grpc

./: BUILD  WORKSPACE  go.mod
api/: BUILD.bazel  hello.proto
bazel/go/: def.bzl  repos.bzl
cmd/: BUILD.bazel
